--- a/.env.example
+++ b/.env.example
@@ -22,9 +22,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=sqlite
 # DB_HOST=127.0.0.1
 # DB_PORT=3306
-# DB_DATABASE=laravel
+# DB_DATABASE=wcarjdkg_kkn_butun
 # DB_USERNAME=root
-# DB_PASSWORD=
+# DB_PASSWORD=password_kalian_sendiri
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
